; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_KToBio.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_KToBio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i64 }
%struct.TYPE_6__ = type { i8* }

@openssl_lock = common dso_local global i32 0, align 4
@PKeyPasswordCallbackFunction = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @KToBio(%struct.TYPE_5__* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_6__, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %11 = icmp eq %struct.TYPE_5__* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %92

13:                                               ; preds = %3
  %14 = call i32* (...) @NewBio()
  store i32* %14, i32** %8, align 8
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %66

19:                                               ; preds = %13
  %20 = load i32, i32* %6, align 4
  %21 = icmp eq i32 %20, 0
  br i1 %21, label %22, label %32

22:                                               ; preds = %19
  %23 = load i32, i32* @openssl_lock, align 4
  %24 = call i32 @Lock(i32 %23)
  %25 = load i32*, i32** %8, align 8
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %27 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = call i32 @i2d_PrivateKey_bio(i32* %25, i32 %28)
  %30 = load i32, i32* @openssl_lock, align 4
  %31 = call i32 @Unlock(i32 %30)
  br label %65

32:                                               ; preds = %19
  %33 = load i8*, i8** %7, align 8
  %34 = icmp eq i8* %33, null
  br i1 %34, label %39, label %35

35:                                               ; preds = %32
  %36 = load i8*, i8** %7, align 8
  %37 = call i64 @StrLen(i8* %36)
  %38 = icmp eq i64 %37, 0
  br i1 %38, label %39, label %49

39:                                               ; preds = %35, %32
  %40 = load i32, i32* @openssl_lock, align 4
  %41 = call i32 @Lock(i32 %40)
  %42 = load i32*, i32** %8, align 8
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %44 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 8
  %46 = call i32 @PEM_write_bio_PrivateKey(i32* %42, i32 %45, i32* null, i32* null, i32 0, i32* null, %struct.TYPE_6__* null)
  %47 = load i32, i32* @openssl_lock, align 4
  %48 = call i32 @Unlock(i32 %47)
  br label %64

49:                                               ; preds = %35
  %50 = load i8*, i8** %7, align 8
  %51 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 0
  store i8* %50, i8** %51, align 8
  %52 = load i32, i32* @openssl_lock, align 4
  %53 = call i32 @Lock(i32 %52)
  %54 = load i32*, i32** %8, align 8
  %55 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %56 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %55, i32 0, i32 0
  %57 = load i32, i32* %56, align 8
  %58 = call i32* (...) @EVP_des_ede3_cbc()
  %59 = load i64, i64* @PKeyPasswordCallbackFunction, align 8
  %60 = inttoptr i64 %59 to i32*
  %61 = call i32 @PEM_write_bio_PrivateKey(i32* %54, i32 %57, i32* %58, i32* null, i32 0, i32* %60, %struct.TYPE_6__* %9)
  %62 = load i32, i32* @openssl_lock, align 4
  %63 = call i32 @Unlock(i32 %62)
  br label %64

64:                                               ; preds = %49, %39
  br label %65

65:                                               ; preds = %64, %22
  br label %90

66:                                               ; preds = %13
  %67 = load i32, i32* %6, align 4
  %68 = icmp eq i32 %67, 0
  br i1 %68, label %69, label %79

69:                                               ; preds = %66
  %70 = load i32, i32* @openssl_lock, align 4
  %71 = call i32 @Lock(i32 %70)
  %72 = load i32*, i32** %8, align 8
  %73 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %74 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %73, i32 0, i32 0
  %75 = load i32, i32* %74, align 8
  %76 = call i32 @i2d_PUBKEY_bio(i32* %72, i32 %75)
  %77 = load i32, i32* @openssl_lock, align 4
  %78 = call i32 @Unlock(i32 %77)
  br label %89

79:                                               ; preds = %66
  %80 = load i32, i32* @openssl_lock, align 4
  %81 = call i32 @Lock(i32 %80)
  %82 = load i32*, i32** %8, align 8
  %83 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %84 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %83, i32 0, i32 0
  %85 = load i32, i32* %84, align 8
  %86 = call i32 @PEM_write_bio_PUBKEY(i32* %82, i32 %85)
  %87 = load i32, i32* @openssl_lock, align 4
  %88 = call i32 @Unlock(i32 %87)
  br label %89

89:                                               ; preds = %79, %69
  br label %90

90:                                               ; preds = %89, %65
  %91 = load i32*, i32** %8, align 8
  store i32* %91, i32** %4, align 8
  br label %92

92:                                               ; preds = %90, %12
  %93 = load i32*, i32** %4, align 8
  ret i32* %93
}

declare dso_local i32* @NewBio(...) #1

declare dso_local i32 @Lock(i32) #1

declare dso_local i32 @i2d_PrivateKey_bio(i32*, i32) #1

declare dso_local i32 @Unlock(i32) #1

declare dso_local i64 @StrLen(i8*) #1

declare dso_local i32 @PEM_write_bio_PrivateKey(i32*, i32, i32*, i32*, i32, i32*, %struct.TYPE_6__*) #1

declare dso_local i32* @EVP_des_ede3_cbc(...) #1

declare dso_local i32 @i2d_PUBKEY_bio(i32*, i32) #1

declare dso_local i32 @PEM_write_bio_PUBKEY(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
